# corewar

./: CMakeLists.txt  Makefile  README.md  author  corewar  main_test.c
asm/: Makefile  asm  rub.c  test.s
asm/includes/: asm.h  asm.h.gch  op.h  op.h.gch
asm/srcs/: a.out  allocation.c  free.c  instructions.c  label.c  main.c  parse_header.c  parser.c  parser_utils.c  test.cor
champion/: zulya.s
includes/: asm.h  corewar.h  op.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_dectostr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_iscntrl.c  ft_isdigit.c  ft_isgraph.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_matrix_del.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_power.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  (+31 more)
libft/includes/: ft_printf.h  libft.h
libft/pft/: ft_printf.c  get_param.c  parse_specifier.c  print_float.c  print_hexadecimal.c  print_nbr.c  print_octal.c  print_txt.c  signed_nbr.c  unsigned_nbr.c
libft/pft/util_fl/: convers_fl.c  match_fl.c
srcs/asm/: allocation.c  file.c  instructions.c  label.c  main.c  parse_header.c  parser.c  parser_utils.c  types.c
srcs/champion/: zulya.s
srcs/corewar/: check_play.c  error.c  free.c  ft_add.c  ft_aff.c  ft_and.c  ft_fork.c  ft_ld.c  ft_ldi.c  ft_lfork.c  ft_live.c  ft_lld.c  ft_lldi.c  ft_or.c  ft_st.c  ft_sti.c  ft_sub.c  ft_xor.c  ft_zjmp.c  init.c  init_champ.c  init_cursor.c  init_vs.c  instr_util.c  main.c  move_cursor.c  op.c  parse_abc.c  parse_args.c  parse_champion.c  parse_flags.c  parse_util.c  play_corewar.c  play_util.c  print.c  print_arena.c  print_bar.c  validate_instr.c  visualizer.c
srcs/corewar/instruction/: ft_add.c  ft_aff.c  ft_and.c  ft_fork.c  ft_ld.c  ft_ldi.c  ft_lfork.c  ft_live.c  ft_lld.c  ft_lldi.c  ft_or.c  ft_st.c  ft_sti.c  ft_sub.c  ft_xor.c  ft_zjmp.c  instr_util.c
srcs/corewar/visualization/: init_vs.c  print_arena.c  print_bar.c  visualizer.c
tests/: log.txt  vm_dump.sh  vm_leaks.sh  zork.cor
