cmake_minimum_required(VERSION 3.16)
project(main_corewar)

set(CMAKE_CXX_STANDARD 14)

include_directories(includes)
include_directories(libft/includes)

add_executable(main_corewar
        includes/corewar.h
        includes/op.h
        libft/includes/ft_printf.h
        libft/includes/libft.h
        libft/pft/util_fl/convers_fl.c
        libft/pft/util_fl/match_fl.c
        libft/pft/ft_printf.c
        libft/pft/get_param.c
        libft/pft/parse_specifier.c
        libft/pft/print_float.c
        libft/pft/print_hexadecimal.c
        libft/pft/print_nbr.c
        libft/pft/print_octal.c
        libft/pft/print_txt.c
        libft/pft/signed_nbr.c
        libft/pft/unsigned_nbr.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_dectostr.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isblank.c
        libft/ft_iscntrl.c
        libft/ft_isdigit.c
        libft/ft_isgraph.c
        libft/ft_islower.c
        libft/ft_isprint.c
        libft/ft_isupper.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_matrix_del.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_power.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strchrpos.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_wordcount.c
        libft/get_next_line.c
        srcs/champion/zulya.s
        srcs/corewar/instruction/ft_add.c
        srcs/corewar/instruction/ft_aff.c
        srcs/corewar/instruction/ft_and.c
        srcs/corewar/instruction/ft_fork.c
        srcs/corewar/instruction/ft_ld.c
        srcs/corewar/instruction/ft_ldi.c
        srcs/corewar/instruction/ft_lfork.c
        srcs/corewar/instruction/ft_live.c
        srcs/corewar/instruction/ft_lld.c
        srcs/corewar/instruction/ft_lldi.c
        srcs/corewar/instruction/ft_or.c
        srcs/corewar/instruction/ft_st.c
        srcs/corewar/instruction/ft_sti.c
        srcs/corewar/instruction/ft_sub.c
        srcs/corewar/instruction/ft_xor.c
        srcs/corewar/instruction/ft_zjmp.c
        srcs/corewar/instruction/instr_util.c
        srcs/corewar/visualization/init_vs.c
        srcs/corewar/visualization/print_arena.c
        srcs/corewar/visualization/print_bar.c
        srcs/corewar/visualization/visualizer.c
        srcs/corewar/check_play.c
        srcs/corewar/error.c
        srcs/corewar/free.c
        srcs/corewar/init.c
        srcs/corewar/init_champ.c
        srcs/corewar/init_cursor.c
        srcs/corewar/main.c
        srcs/corewar/move_cursor.c
        srcs/corewar/op.c
        srcs/corewar/parse_abc.c
        srcs/corewar/parse_args.c
        srcs/corewar/parse_champion.c
        srcs/corewar/parse_flags.c
        srcs/corewar/parse_util.c
        srcs/corewar/play_corewar.c
        srcs/corewar/play_util.c
        srcs/corewar/print.c
        srcs/corewar/validate_instr.c
        tests/amedvedi.cor
        tests/kalle.cor
        tests/log.txt
        tests/vm_dump.sh
        tests/vm_leaks.sh
        tests/zork.cor
        Makefile)
